--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,34 @@
 @import "~bootstrap/scss/bootstrap";
 
+header{
+    width: 100%;
+    height: 90px;
+    border: 3px solid black;
+
+    .container-header{
+        width: 85%;
+        margin: auto;
+    }
+
+    .line-height-header{
+        line-height: 5;
+    }
+
+    .logo-header{
+        width: 80%;
+    }
+
+    ul li{
+        margin-right: 25px;
+    }
+    
+    input{
+        height: 30%;
+        width: 100%;
+    }
+    
+}
+
 main {
     background-color: lightcoral;
 }
