--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -29,16 +29,87 @@ header{
     
 }
 
-main {
-    background-color: lightcoral;
+main{
+
+    #main-section-1{
+        background-image: url('../img/jumbotron.jpg');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        min-height: 300px;
+    }
 }
 
-.gatto-img {
-    height: 200px;
+
+main{
+
+    #main-section-2{
+        justify-content: center;
+        background-color: black;
+        width: 100%;
+        
+        .setting-card-section-2{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            margin: auto;
+            height: calc((100px / 6) - 60px);
+            margin-left: 30px;
+            margin-right: 30px;
+        }
+
+        img{
+            display: block;
+            margin-bottom: 10px;
+            object-fit: cover;
+        }
+    }
 }
 
-.gatto-bg {
-    height: 200px;
-    background-image: url('../img/gatto.webp');
-    background-size: contain;
+main{
+
+    #main-section-3{
+        width: 100%;
+        height: 150px;
+        background-color: blue;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .width-image-section-3{
+        width: 50px;
+    }
+
+    .margine{
+        margin-left: 15px;
+    }
+}
+
+
+footer{
+    width: 100%;
+    border: 3px solid black;
+    background-image: url('../img/footer-bg.jpg');
+    color: white;
+    font-size: 13px;
+
+    .container-footer {
+        width: 70vw;
+        height: 100%;
+    }
+    .col-footer-width {
+        width: calc(100% / 6);
+    }
+
+    .color-text-footer {
+        color: grey;
+    }
+    .grow-footer {
+        flex-grow: 1;
+    }
+    .logo-background-footer {
+        background-image: url("../img/dc-logo-bg.png");
+        background-size: cover;
+        background-position: center;
+    }
+
 }
